<resources>
    <string name="app_name">example</string>
    <string name="profileName">Someone__</string>
    <string name="view_comments">View comments</string>
    <string name="few_days_ago">Few Days Ago</string>
    <string name="image_caption_text">image loading....</string>
    <string name="liked_by_billions">Liked by billions</string>
    <string name="locationText">somewhere in this world</string>
    <string name="menu">menu</string>
    <string name="post_image">post image</string>
    <string name="like">like</string>
    <string name="comments">comments</string>
    <string name="favorites">favorites</string>
    <string name="description">A lot of words and #hashtags here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>